<resources>
    <string name="app_name">WorkingWithStorage</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_storage_category">Storage</string>
    <string name="settings_storage_type_title">Storage type</string>
    <string name="settings_sorting_category">Sorting</string>
    <string name="settings_sorting_type_title">Sort by</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="breed">Breed</string>
    <string name="toolbar_title_animals">Animals</string>
    <string name="toolbar_title_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="toolbar_title_add_new_animal">Add new animal</string>
    <string name="toolbar_title_update_animal">Update animal</string>
    <string name="edit_animal_fragment_button_add">Add</string>
    <string name="edit_animal_fragment_et_breed">Breed</string>
    <string name="edit_animal_fragment_et_age">Age</string>
    <string name="edit_animal_fragment_et_name">Name</string>
    <string name="edit_animal_fragment_button_save">Save</string>
    <string name="toast_enter_correct_data">Enter correct data, please!</string>
    <string name="fragment_animals_floating_button">Floating button</string>

</resources>