<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_storage_category">
        <ListPreference
            app:entries="@array/storage_type_entries"
            app:entryValues="@array/storage_type_values"
            app:key="storage_type"
            app:title="@string/settings_storage_type_title"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="sq_lite"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_sorting_category">
        <ListPreference
            app:entries="@array/sorting_type_entries"
            app:entryValues="@array/sorting_type_values"
            app:key="sort_by"
            app:title="@string/settings_sorting_type_title"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="name"/>
    </PreferenceCategory>

</PreferenceScreen>